Remove all the sass variables here on their own file and import the variables

--- a/scss/manifest.scss
+++ b/scss/manifest.scss
@@ -1,6 +1,4 @@
-$colour_background: #eee;
-$colour_text: #690;
-$font_base_size: 16px !default;
+@import "./variables/index";
 
 html {
   font-size: $font_base_size;
