--- a/scss/_bootstrap-manifest.scss
+++ b/scss/_bootstrap-manifest.scss
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/scss/functions";
+// @import "./variables/bootstrap-defaults";
  @import "./variables/bootstrap-custom";
  @import "../node_modules/bootstrap/scss/mixins";
 //  @import "../node_modules/bootstrap/scss/root";
