Remove the file that has been added

--- a/scss/variables/_bootstrap-custom.scss
+++ b/scss/variables/_bootstrap-custom.scss
@@ -86,7 +86,11 @@ $theme-colors: map-merge(
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    "dark":       $dark
+    "dark":       $dark,
+    "black":      $black,
+    "red":        $red,
+    "white":      $white,
+    "lightgrey":       $gray-500
   ),
   $theme-colors
 );
@@ -1145,3 +1149,5 @@ $user-selects: all, auto, none !default;
 
 $print-page-size:                   a3 !default;
 $print-body-min-width:              map-get($grid-breakpoints, "lg") !default;
+
+$padding-panel:                     2rem;
