Added new colour

--- a/scss/variables/_bootstrap-custom.scss
+++ b/scss/variables/_bootstrap-custom.scss
@@ -16,6 +16,8 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black:    #000 !default;
+$darkshadegray: #4F4F4F !default;
+
 
 $grays: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -61,7 +63,8 @@ $colors: map-merge(
     "cyan":       $cyan,
     "white":      $white,
     "gray":       $gray-600,
-    "gray-dark":  $gray-800
+    "gray-dark":  $gray-800,
+    "shade-gray": $darkshadegray,
   ),
   $colors
 );
